Bug 1050703 Don't reset selection at starting composition if it's unnecessary r=emk